--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright 2014 Git.Training
 Some silly changes from master branch 
 -->
 <head>
-	<title>Silly changes on Master</title>
+	<title>Lots of trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,12 +18,11 @@ Some silly changes from master branch
 	<main class="container">
 	<!-- Junk filler content -->
 		<p>
-			Just stuff for now,
-			Not  sure if we should replace this or not
+			Just nothin' but trouble.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Jason taylor 2014</p>
+		<p>&copy; Git training 2014</p>
 	</footer>
 </body>
 </html>
